src/eccodes/eccodes.h

/*! Codes handle,   structure giving access to parsed values by keys
    \ingroup codes_handle
    \struct codes_handle
*/
typedef struct grib_handle codes_handle;
/*! GRIB multi-field handle, structure used to build multi-field messages.
    \ingroup codes_handle
    \struct codes_multi_handle
 */
typedef struct grib_multi_handle codes_multi_handle;
/*! Codes context,  structure containing the memory methods, the parsers and the formats.
    \ingroup codes_context
    \struct codes_context
*/
typedef struct grib_context codes_context;
/*! @} */

/*! \defgroup codes_handle The message handle
The codes_handle is the structure giving access to parsed message values by keys.
*/
/*! @{*/
/**
 *  Counts the messages contained in a file resource.
 *
 * @param c           : the context from which the handle will be created (NULL for default context)
 * @param f           : the file resource
 * @param n           : the number of messages in the file
 * @return            0 if OK, integer value on error
 */
int codes_count_in_file(codes_context* c, FILE* f, int* n);
/**
 *  Create an empty multi-field GRIB handle.
 *  This is only applicable to GRIB edition 2.
 *  Remember always to delete the multi-handle when it is not needed anymore to avoid
 *  memory leaks.
 *
 * @param c           : the context from which the handle will be created (NULL for default context)
 */
codes_multi_handle* codes_grib_multi_handle_new(codes_context* c);
/**
 *  Append the sections starting with start_section of the message pointed by h at
 *  the end of the multi-field GRIB handle mh.
 *  This is only applicable to GRIB edition 2.
 *  Remember always to delete the multi-handle when it is not needed anymore to avoid
 *  memory leaks.
 *
 * @param h           : The handle from which the sections are copied.
 * @param start_section : Section number. Starting from this section all the sections to the end of the message will be copied.
 * @param mh          : The multi-field handle on which the sections are appended.
 * @return            0 if OK, integer value on error
 */
int codes_grib_multi_handle_append(codes_handle* h, int start_section, codes_multi_handle* mh);
/**
 * Delete multi-field GRIB handle.
 * This is only applicable to GRIB edition 2.
 *
 * @param mh          : The multi-field handle to be deleted.
 * @return            0 if OK, integer value on error
 */
int codes_grib_multi_handle_delete(codes_multi_handle* mh);
/**
 *  Write a multi-field GRIB handle in a file.
 *  This is only applicable to GRIB edition 2.
 *  Remember always to delete the multi-handle when it is not needed anymore to avoid
 *  memory leaks.
 *
 * @param mh          : The multi-field GRIB handle to be written.
 * @param f            : File on which the file handle is written.
 * @return            0 if OK, integer value on error
 */
int codes_grib_multi_handle_write(codes_multi_handle* mh, FILE* f);
/*int  codes_get_bufr_multi_element_constant_arrays(codes_context* c);*/

/**
 * Sets the search path for definition files.
 *
 * @param c      : the context to be modified
 * @param path   : the search path for definition files
 */
void codes_context_set_definitions_path(codes_context* c, const char* path);
/**
 * Sets the search path for sample files.
 *
 * @param c      : the context to be modified
 * @param path   : the search path for sample files
 */
void codes_context_set_samples_path(codes_context* c, const char* path);