rust/crates/eccodes-sys/src/bindings_stub.rs


    // Multi-field support
    pub fn codes_grib_multi_handle_new(c: *mut codes_context) -> *mut grib_multi_handle;
    pub fn codes_grib_multi_handle_append(
        h: *mut codes_handle,
        start_section: c_int,
        mh: *mut grib_multi_handle,
    ) -> c_int;
    pub fn codes_grib_multi_handle_delete(mh: *mut grib_multi_handle) -> c_int;
    pub fn codes_grib_multi_handle_write(
        mh: *mut grib_multi_handle,
        f: *mut FILE,
    ) -> c_int;

    // Path configuration
    pub fn codes_context_set_definitions_path(
        c: *mut codes_context,
        path: *const c_char,
    );
    pub fn codes_context_set_samples_path(
        c: *mut codes_context,
        path: *const c_char,
    );

    // Count messages
    pub fn codes_count_in_file(
        c: *mut codes_context,
        f: *mut FILE,
        n: *mut c_int,
    ) -> c_int;
}
